--- a/history3.html
+++ b/history3.html
@@ -9,7 +9,7 @@
     <h2>Prizes</h2>
     <div class="two-thirds">
       <nav>
-        <a href="history.html">1st</a>
+        <a href="index.html">1st</a>
         <a href="history2.html">2nd</a>
         <a href="history3.html" class="current">3rd</a>
       </nav>
